[package]
name = "rpkit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.1"
rp2040-pac = { git = "https://github.com/rp-rs/rp2040-pac", branch="main" }

[dev-dependencies]
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
rp2040-boot2 = "0.1.2"
panic-semihosting = "0.5.6"

[profile.release]
debug = true
lto = true
opt-level = "s"
